--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="js/Faker.js"></script>
 	<script type="text/javascript" src="js/knockout.localStorage.js"></script>
 	<script type="text/javascript" src="js/data.js"></script>
-	
+	<script type="text/javascript" src="js/Repository.js"></script>
 	<script type="text/html" id="income-page" >
 		<div class="span2">
 <div class="sidebar-nav">
@@ -86,32 +86,56 @@
 
 		</div>	
 	</script>
+
 	<script type="text/template" id="members-page">
-<div class="span2 offset2">
-<div class="row-fluid">
+		<div class="span2 offset2">
+		<div class="row-fluid">
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Members</th>
+						<th></th>
+					</tr>
+				</thead>
+				<tbody data-bind="foreach : members">
+						<td data-bind="text : $data"></td>
+						<td><a class="btn btn-danger btn-mini" data-bind="click : $parent.removeClick">remove</a></td>
+					</tr>	
+				</tbody>
+			</table>
+			</div>
+			<div class="row-fluid">
+			<div class="input-append">
+			  <input class="span12" id="appendedInputButton" type="text" data-bind="value : name"/>
+			  <button class="btn btn-success" type="button" data-bind="click : addClick">Add</button>
+			  <button class="btn btn-info" type="button" data-bind="click : randomClick">Random</button>
+			</div>
+			</div>
+		</div>
+	</script>
+
+<script type="text/template" id="costs-page">
 	<table class="table">
 		<thead>
 			<tr>
-				<th>Members</th>
+				<th><th>
+				<th>Costs</th>
 				<th></th>
 			</tr>
 		</thead>
-		<tbody data-bind="foreach : members">
-				<td data-bind="text : $data"></td>
+		<tbody data-bind="foreach : costs">
+				<td data-bind="text : nameLow"></td>
+				<td ><input type="text" data-bind="value : name"/></td>
 				<td><a class="btn btn-danger btn-mini" data-bind="click : $parent.removeClick">remove</a></td>
 			</tr>	
 		</tbody>
 	</table>
-	</div>
-	<div class="row-fluid">
-	<div class="input-append">
-	  <input class="span12" id="appendedInputButton" type="text" data-bind="value : name"/>
-	  <button class="btn btn-success" type="button" data-bind="click : addClick">Add</button>
-	  <button class="btn btn-info" type="button" data-bind="click : randomClick">Random</button>
-	</div>
-	</div>
-</div>
-	</script>
+		<div class="input-append">
+	  		<input class="span12" id="appendedInputButton" type="text" data-bind="value : name"/>
+	  		<button class="btn btn-success" type="button" data-bind="click : addClick">Add</button>
+		</div>
+</script>
+
 
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/IncomeViewModel.js"></script>
@@ -134,7 +158,7 @@
 		</div>		
 		<div class="span1"><a href="#" data-bind="click : incomeClick">Income</a>
 		</div>		
-		<div class="span1"><a href="#">Home</a>
+		<div class="span1"><a href="#" data-bind="click : costClick">Home</a>
 		</div>		
 		<div class="span1">Transport
 		</div>		
