--- a/index.html
+++ b/index.html
@@ -149,27 +149,14 @@
 	<div class="row-fluid">
 		<div class="offset2 span7">
 			<div class="progress">
-			  <div class="bar" style="width: 10%;"></div>
+			  <div class="bar" style="width: 10%;" data-bind="style : { width : progress }"></div>
 			</div>
 		</div>		
 	</div>
-	<div class="row-fluid">
-		<div class="offset1 span1"><a href="#" data-bind="click : memberClick">Members</a>
-		</div>		
-		<div class="span1"><a href="#" data-bind="click : incomeClick">Income</a>
-		</div>		
-		<div class="span1"><a href="#" data-bind="click : costClick">Home</a>
-		</div>		
-		<div class="span1">Transport
-		</div>		
-		<div class="span1">Finances
-		</div>		
-		<div class="span1">Personal
-		</div>		
-		<div class="span1">Annual
-		</div>		
-		<div class="span1">One-offs
-		</div>		
+	<div class="row-fluid" data-bind="foreach : pages">
+		<div class="span1" data-bind="css : { offset1 : $index() == 0 }">
+			<a href="#" data-bind="click : $parent.showClick, text : $data"></a>
+		</div>
 	</div>
 	<div class="row-fluid" data-bind="with : page">
 		<!-- ko template : { name : template } -->
