--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
 </div>
 		</div>
 		<div class="span10" >
-			
+<div  class="row-fluid">
+		<div class="span12">
+			<h1>Total by <!-- ko text : selectedCategory --><!-- /ko -->: <span class="badge badge-success" style="font-size: 30px; line-height: 35px;" data-bind="text : total"></span></h1>
+		</div>
+</div>
+
 <div  class="row-fluid">
 	<div class="span7">
 
@@ -44,11 +49,9 @@
 	  <a href="#" class="btn"  data-bind="css : { active : $data == $parent.selectedMember() }, text : $data, click : $parent.selectMember">Prices</a>
 	</div>
 
-	
+
 	</div>
-			<div class="span5">
-			<h3>Total by <!-- ko text : selectedCategory --><!-- /ko -->:<span class="badge badge-success" style="font-size: 20px; line-height: 25px;" data-bind="text : total"></span></h3>
-		</div>
+	<div class="span5" style="margin-top: 20px;"><a class="btn pull-right btn-primary" data-bind="click : editMemberClick"><i class="icon-user icon-white"></i> edit members</a></div>
 </div>
 	
 
@@ -146,6 +149,13 @@
 </head>
 <body>
 <div class='container-fluid'>
+	<div class="row-fluid" >
+		<ul class="nav nav-pills" data-bind="foreach : pages">
+		  <li  class="span1" data-bind="css : { offset2 : $index() == 0, active : $data == $parent.currentPage() }">
+		    <a href="#" data-bind="click : $parent.showClick, text : $data"></a>
+		  </li>
+		</ul>
+	</div>
 	<div class="row-fluid">
 		<div class="offset2 span7">
 			<div class="progress">
@@ -153,17 +163,7 @@
 			</div>
 		</div>		
 	</div>
-	<div class="row-fluid" >
-		<!-- <div class="span1" data-bind="css : { offset1 : $index() == 0 }">
-			<a href="#" data-bind="click : $parent.showClick, text : $data"></a>
-		</div> -->
 
-		<ul class="nav nav-pills" data-bind="foreach : pages">
-		  <li  class="span1" data-bind="css : { offset1 : $index() == 0, active : $data == $parent.currentPage() }">
-		    <a href="#" data-bind="click : $parent.showClick, text : $data"></a>
-		  </li>
-		</ul>
-	</div>
 	<div class="row-fluid" data-bind="with : page">
 		<!-- ko template : { name : template } -->
 		<!-- /ko -->
